TESTservive.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app:  hello-v1
template:
  metadata:
  labels:
    app: hello-v1
  spec:
    containers: 
    - name: hello
      image: gcr.io/gooogle-smples/hello-app:1.0
      imagePullPolicy:  IfNotPresent
      ports:
      - containerPort:  8080

---

king: Service
apiVersion: v1
metadata:
  name: hello-v1-svc
spec:
  selector:
    app:  hello-v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
