app-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-v1
spec:
  selector:
    app: hello-v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    exposePort: 3000
