02-.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress
    annotations:
        kubernetes.io/ingress.class: "nginx"
spec:
    rules:
    - host: unalmeet.edu.com 
        http: 
        paths:
        - path: 
            backend:
            serviceHost: http://localhost/CC/
            serviceName:
