02-.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress
    annotations:
        kubernetes.io/ingress.class: "nginx"
spec:
    rules:
    - host: unalmeet.edu.com #Nuestro nombre de dominio configurado en el DNS
        http: &http_rules
        paths:
        - path: 
            backend:
            serviceHost: http://localhost/CC/
            serviceName: #Poner el nombre del servicio
