02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: unalmeet.edu.com 
    http:
      paths: 
      - backend:
          serviceName: hello-v1-svc
          servicePort: 80
