04-ingress-2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress
    annotations:
        kubernetes.io/ingress.class: "nginx"
        cert-manager.io/issuer: "letsencrypt-prod"
spec:
    tls:
    - hosts:
        - unalmeet.edu.com
        secretName: unal-tls
    rules:
    - host: unalmeet.edu.com 
        http: &http_rules
        paths:
        - path: 
            backend:
            serviceHost: http://localhost/CC/
            serviceName:
