ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - unalmeet.com
    secretName: unal5-tls
  rules:
  - host: unalmeet.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          serviceName: unalmeet-wa-service
          servicePort: 80
